pglookout 1.4.0 (2016-xx-xx)
============================

* Fix statsd data sending bug breaking setups with observer nodes

pglookout 1.3.1 (2016-05-31)
============================

* Support for Telegraf statsd
* Check cluster state concurrently from all endpoints
* Don't collect replication log metrics or issue warnings about it until we
  have actually seen a master.  Previously pglookout could warn about
  replication lag while PostgreSQL was performing archive recovery.
* New `primary_conninfo_template` configuration option to generate a
  primary_conninfo for recovery.conf when we start following a (new) master.
  Previously pglookout tried to read an existing primary_conninfo and
  replace the host part of it with the new master's address, but this may
  not always work, for example in case there's no primary_conninfo at all.
* Automatically promote one of the standby nodes if pglookout has never seen
  a master for N seconds
* Failover now selects the node with highest identifier if multiple nodes
  have the same replication position
* `remote_conns` object's keys no longer have functional meaning.  Remote
  addresses are only read from the values of the object.
* Show version number in pglookout --version
* Emit a warning when running under systemd without python-systemd installed
* Fix logging to syslog and use the same format when logging to journald
* Drop support for Python 2.6
* Various minor bug fixes, refactoring and improved test cases

pglookout 1.2.0 (2015-06-15)
============================

* Support autofollow, where a standby starts automatically following another
  standby that has been promoted to be the new cluster master
* Packaging improvements
* Multiple bugfixes
* unittest fixes to cope better with parallel testruns
* Better support for completely idle PG replication enviroments

pglookout 1.1.0 (2015-02-14)
============================

* Add support for observers to participate simultaneously in multiple