@@ -1,7 +1,9 @@
 pglookout 1.4.0 (2016-xx-xx)
 ============================
 
-* Fix statsd data sending bug breaking setups with observer nodes
+* Fix statsd data sending bug breaking setups with observer nodes.
+* To ease replication monitoring, include master node's replication
+  position in the pglookout state file.
 
 pglookout 1.3.1 (2016-05-31)
 ============================
